--- a/promigrante/app/views/profamilia/events_closed.html
+++ b/promigrante/app/views/profamilia/events_closed.html
@@ -1,6 +1,6 @@
 
 <div class="col-sm-12">
-	<h1 class="font-thin h3">Eventos activos<span class="badge"></span></h1>
+	<h1 class="font-thin h3">Eventos cerrados (4)<span class="badge"></span></h1>
 	<p class="text-muted">Aquí llegan todos los reportes que ya han sido atendidos y cerrados.</p>
 </div>
 <div class="col-sm-8">
@@ -171,9 +171,8 @@
 <div class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-12">
-			<h5>Reportes (8)</h5>
 			<div class="md-list md-whiteframe-z0 m-b">
-				<div class="md-list-item  bg-info">
+				<div class="md-list-item  item-selected">
 					<div class="md-list-item-left"> <img src="images/a0.jpg" class="w-full circle"> </div>
 					<div class="md-list-item-content"> <span class="label gray pull-right"><a href="">Evento cerrado</a></span>
 						<h3 class="text-md"><a href="">Miguel Ríos</a></h3> <small class="font-thin">Phar, Texas</small>
