--- a/promigrante/app/views/profamilia/events_open.html
+++ b/promigrante/app/views/profamilia/events_open.html
@@ -172,7 +172,7 @@
 	<div class="row">
 		<div class="col-sm-12">
 			<div class="md-list md-whiteframe-z0 m-b">
-				<div class="md-list-item  pm-item-selected">
+				<div class="md-list-item  item-selected">
 					<div class="md-list-item-left"> <img src="images/a9.jpg" class="w-full circle"> </div>
 					<div class="md-list-item-content"> <span class="label red pull-right"><a href="">Atender evento</a></span>
 						<h3 class="text-md h3-event">Miguel Ríos</h3> <small class="font-thin">Phar, Texas</small>
