mejora de estilos web

--- a/promigrante/app/views/profamilia/lock_screen.html
+++ b/promigrante/app/views/profamilia/lock_screen.html
@@ -1,4 +1,4 @@
-<div class="modal-over bg-dark">
+<div class="modal-over pm-bg-orange">
   <div class="modal-center text-center animated fadeInUp" style="width:240px;margin:-120px 0 0 -120px;">
     <div class="m-b">
       <img src="images/a0.jpg" class="w-64 circle">
@@ -9,7 +9,8 @@
     	<label class="block w-full">Tu contraseña</label>
     </div>
     <div class="m-t">
-    	<a href="#/app/events/open" class="md-btn md-raised pink p-h-md">Desbloquear</a>
+<!--    	<a href="#/app/events/open" class="md-btn md-raised p-h-md bg-btn-blue ">Desbloquear</a>-->
+			<button md-ink-ripple  ui-sref="app.events_open" class="md-btn md-raised pm-bar-blue btn-block p-h-md">Acceder</button>
 	</div>
   </div>
 </div>
