--- a/promigrante/app/styles/app.css
+++ b/promigrante/app/styles/app.css
@@ -2,6 +2,8 @@
 
 */
 
+
+
 [ui-view].ng-leave {
   display: none;
 }
@@ -112,7 +114,7 @@ html {
 }
 
 body {
-  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica", Helvetica, Arial, sans-serif;
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
   line-height: 1.42857143;
@@ -130,7 +132,7 @@ h3,
 .h1,
 .h2,
 .h3 {
-  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica", Helvetica, Arial, sans-serif;
 }
 
 .h1,
@@ -6245,7 +6247,34 @@ a.text-dark:hover {
 	color: #fff;
 }
 
-.pm-button-orange {
+.pm-btn-blue{
+	background-color: #0e2645;
+	color: #fff;
+}
+.pm-btn-blue:hover{
+	background-color: #0e2645;
+	color: #fff;
+}
+.pm-btn-blue:focus{
+	background-color: #0e2645;
+	color: #fff;
+}
+.pm-btn-blue:active{
+	background-color: #0e2645;
+	color: #fff;
+}
+
+
+.pm-btn-blue:hov {
+	background-color: #0e2645;
+	color: #fff;
+}
+
+.pm-bg-orange {
+	background-color: #f15922;
+	color: #fff;
+}
+.pm-btn-orange {
 	background-color: #f15922;
 	color: #fff;
 }
@@ -6347,7 +6376,7 @@ form label {
 }
 
 .card {
-	background-color: #dff2f3;
+/*	background-color: #dff2f3;*/
 	border:none;
 	box-shadow: none;
 }
@@ -6373,4 +6402,20 @@ form label {
 }
 .panel-heading h2{
 	font-size: 20px;
+}
+
+h2{
+	
+	font-family: 'LatoBold';
+	
+}
+.panel-heading{
+	
+	font-family: 'LatoBold';
+	
+}
+
+
+.h4 {
+	font-family: 'Bebas';
 }
