--- a/promigrante/app/styles/font.css
+++ b/promigrante/app/styles/font.css
@@ -1,4 +1,26 @@
 @font-face {
+	font-family: 'Bebas';
+	src: url('../fonts/BebasNeue-Regular.eot');
+	src: url('../fonts/BebasNeue-Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/BebasNeue-Regular.woff') format('woff'), url('../fonts/BebasNeue-Regular.ttf') format('truetype'), url('../fonts/BebasNeue-Regular.svg#Bebas') format('svg');
+}
+
+@font-face {
+	font-family: 'LatoBold';
+	src: url('../fonts/Lato-Bold.eot');
+	src: url('../fonts/Lato-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Lato-Bold.woff') format('woff'), url('../fonts/Lato-Bold.ttf') format('truetype'), url('../fonts/Lato-Bold.svg#LatoBold') format('svg');
+}
+
+@font-face {
+	font-family: 'Conv_HelveticaLTStd-Light';
+	src: url('../fonts/HelveticaLTStd-Light.eot');
+	src: local('☺'), url('../fonts/HelveticaLTStd-Light.woff') format('woff'), url('../fonts/HelveticaLTStd-Light.ttf') format('truetype'), url('../fonts/HelveticaLTStd-Light.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+
+/*
+@font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
@@ -16,3 +38,4 @@
   font-weight: 700;
   src: local('Roboto Bold'), local('Roboto-Bold'), url(../fonts/roboto/roboto-bold.woff) format('woff');
 }
+*/
