--- a/promigrante/app/views/aside.html
+++ b/promigrante/app/views/aside.html
@@ -13,10 +13,10 @@
       <div class="box-inner">
         <div class="p hidden-folded" ng-class="$state.current.data.theme ? $state.current.data.theme.primary+'-50' : app.setting.theme.primary+'-50'" style="background-image:url(images/bg.png); background-size:cover">
           <div class="rounded w-64 bg-white inline pos-rlt">
-            <img src="images/a0.jpg" class="img-responsive rounded">
+            <img src="images/a3.jpg" class="img-responsive rounded">
           </div>
           <a class="block m-t-sm" ui-toggle-class="hide, show" target="#nav, #account">
-            <span class="block font-bold">John Smith</span>
+            <span class="block font-bold">Agente 1</span>
             <span class="pull-right auto">
               <i class="fa inline fa-caret-down"></i>
               <i class="fa none fa-caret-up"></i>
