--- a/promigrante/app/views/partials/aside.nav.uikit.html
+++ b/promigrante/app/views/partials/aside.nav.uikit.html
@@ -1,88 +1,47 @@
 <nav ui-nav>
-  <ul class="nav">
-    <li class="nav-header m-v-sm hidden-folded">
-      Menú
-    </li>
-    
-    <li ui-sref-active="active">
-      <a md-ink-ripple ui-sref="app.dashboard">
-        <i class="icon mdi-action-settings-input-svideo i-20"></i>
-        <span class="font-normal">Dashboard</span>
-      </a>
-     
-    </li>
-		 <li>
-      <a md-ink-ripple>
-        <span class="pull-right text-muted">
-          <i class="fa fa-caret-down"></i>
-        </span>
-				<i class="pull-right up"><b class="badge bg-danger">14</b></i>
-        <i class="icon mdi-notification-tap-and-play i-20"></i>
-        <span class="font-normal">Eventos</span>
-      </a>
-      <ul class="nav nav-sub">
-        <li ui-sref-active="active">
-          <a md-ink-ripple ui-sref="app.events_open">Activos</a>
-        </li>
-        <li ui-sref-active="active">
-          <a md-ink-ripple ui-sref="app.events_closed">Cerrados</a>
-        </li>
-      </ul>
-    </li>
-		 <li>
-      <a md-ink-ripple>
-        <span class="pull-right text-muted">
-          <i class="fa fa-caret-down"></i>
-        </span>
-        <i class="pull-right up"><b class="badge no-bg"></b></i>
-        <i class="icon mdi-av-my-library-books i-20"></i>
-        <span class="font-normal">News feed</span>
-      </a>
-      <ul class="nav nav-sub">
-        <li ui-sref-active="active">
-          <a md-ink-ripple ui-sref="app.news_feeds">Feeds</a>
-        </li>
-        <li ui-sref-active="active">
-          <a md-ink-ripple ui-sref="app.feed_new">Nuevo feed</a>
-        </li>
-      </ul>
-    </li>
+	<ul class="nav">
+		<li class="nav-header m-v-sm hidden-folded"> Menú </li>
 		<li ui-sref-active="active">
-      <a md-ink-ripple ui-sref="app.subscriptions">
-        <i class="icon mdi-social-people i-20"></i>
-        <span class="font-normal">Suscripciones</span>
-      </a>
-     
-    </li>
-		<li ui-sref-active="active">
-      <a md-ink-ripple ui-sref="app.notifications">
-        <i class="icon mdi-communication-message i-20"></i>
-        <span class="font-normal">Notificaciones</span>
-      </a>
-     
-    </li>
+			<a md-ink-ripple ui-sref="app.dashboard"> <i class="icon mdi-action-settings-input-svideo i-20"></i> <span class="font-normal">Dashboard</span> </a>
+		</li>
 		<li>
-      <a md-ink-ripple>
-        <span class="pull-right text-muted">
+			<a md-ink-ripple> <span class="pull-right text-muted">
           <i class="fa fa-caret-down"></i>
-        </span>
-        <i class="pull-right up"><b class="badge no-bg"></b></i>
-        <i class="icon mdi-action-assignment i-20"></i>
-        <span class="font-normal">Admin MARPEX</span>
-      </a>
-      <ul class="nav nav-sub">
-        <li ui-sref-active="active">
-          <a md-ink-ripple ui-sref="app.catalogs">Abogados</a>
-        </li>
-        <li ui-sref-active="active">
-          <a md-ink-ripple ui-sref="app.catalogs">Consulados</a>
-        </li>
-        <li ui-sref-active="active">
-          <a md-ink-ripple ui-sref="app.catalogs">Paquetes</a>
-        </li>
-      </ul>
-    </li>
+        </span> <i class="pull-right up"><b class="badge bg-danger">8</b></i> <i class="icon mdi-notification-tap-and-play i-20"></i> <span class="font-normal">Eventos</span> </a>
+			<ul class="nav nav-sub">
+				<li ui-sref-active="active"> <a md-ink-ripple ui-sref="app.events_open">Activos</a> </li>
+				<li ui-sref-active="active"> <a md-ink-ripple ui-sref="app.events_closed">Cerrados</a> </li>
+			</ul>
+		</li>
+		<li>
+			<a md-ink-ripple> <span class="pull-right text-muted">
+          <i class="fa fa-caret-down"></i>
+        </span> <i class="pull-right up"><b class="badge no-bg"></b></i> <i class="icon mdi-av-my-library-books i-20"></i> <span class="font-normal">News feed</span> </a>
+			<ul class="nav nav-sub">
+				<li ui-sref-active="active"> <a md-ink-ripple ui-sref="app.news_feeds">Feeds</a> </li>
+				<li ui-sref-active="active"> <a md-ink-ripple ui-sref="app.feed_new">Nuevo feed</a> </li>
+			</ul>
+		</li>
+		<li ui-sref-active="active">
+			<a md-ink-ripple ui-sref="app.subscriptions"> <i class="icon mdi-social-people i-20"></i> <span class="font-normal">Suscripciones</span> </a>
+		</li>
+		<li ui-sref-active="active">
+			<a md-ink-ripple ui-sref="app.notifications"> <i class="icon mdi-communication-message i-20"></i> <span class="font-normal">Notificaciones</span> </a>
+		</li>
+		<li>
+			<a md-ink-ripple> <span class="pull-right text-muted">
+          <i class="fa fa-caret-down"></i>
+        </span> <i class="pull-right up"><b class="badge no-bg"></b></i> <i class="icon mdi-action-assignment i-20"></i> <span class="font-normal">Admin MARPEX</span> </a>
+			<ul class="nav nav-sub">
+				<li ui-sref-active="active"> <a md-ink-ripple ui-sref="app.catalogs">Abogados</a> </li>
+				<li ui-sref-active="active"> <a md-ink-ripple ui-sref="app.catalogs">Consulados</a> </li>
+				<li ui-sref-active="active"> <a md-ink-ripple ui-sref="app.catalogs">Paquetes</a> </li>
+			</ul>
+		</li>
 		<hr>
+		<li>
+			<a md-ink-ripple ui-sref="app.my_profile"> <i class="icon mdi-action-perm-contact-cal i-20"></i> <span>Administrar perfil</span> </a>
+		</li>
 		<!--
     <li>
       <a md-ink-ripple>
@@ -379,5 +338,5 @@
       </a>
     </li>
 -->
-  </ul>
+	</ul>
 </nav>
