--- a/promigrante/app/views/profamilia/events_open.html
+++ b/promigrante/app/views/profamilia/events_open.html
@@ -61,6 +61,53 @@
 					<div class="md-form-group">
 						<label>Plan de contingencia familiar</label>
 					</div>
+					<div role="tabpanel" class="tab-pane animated fadeIn active" id="emergency_plan">
+					<div class="md-list md-whiteframe-z0 bg-white m-b">
+						<div class="md-list-item">
+							<div class="md-list-item-left pm-bg-green">
+            1
+          </div>
+							<div class="md-list-item-content">
+								<h3 class="text-md bold">¿Tiene algún padecimiento de salud?</h3> <strong>Sí</strong> </div>
+						</div>
+					</div>
+					<div class="md-list md-whiteframe-z0 bg-white m-b">
+						<div class="md-list-item">
+							<div class="md-list-item-left pm-bg-green">
+            2
+          </div>
+							<div class="md-list-item-content">
+								<h3 class="text-md bold">¿Tiene algún padecimiento de salud?</h3> <strong>Sí</strong> </div>
+						</div>
+					</div>
+					<div class="md-list md-whiteframe-z0 bg-white m-b">
+						<div class="md-list-item">
+							<div class="md-list-item-left pm-bg-green">
+            3
+          </div>
+							<div class="md-list-item-content">
+								<h3 class="text-md bold">¿Se encuentra en tratamiento médico?</h3> <strong>Sí</strong> </div>
+						</div>
+					</div>
+					<div class="md-list md-whiteframe-z0 bg-white m-b">
+						<div class="md-list-item">
+							<div class="md-list-item-left pm-bg-green">
+            4
+          </div>
+							<div class="md-list-item-content">
+								<h3 class="text-md bold">¿Tiene Hijos?</h3> <strong>Sí</strong> </div>
+						</div>
+					</div>
+					<div class="md-list md-whiteframe-z0 bg-white m-b">
+						<div class="md-list-item">
+							<div class="md-list-item-left pm-bg-green">
+            5
+          </div>
+							<div class="md-list-item-content">
+								<h3 class="text-md bold">¿Cuántos?</h3> <strong>4</strong> </div>
+						</div>
+					</div>
+				</div>
 					<div class="md-list md-whiteframe-z0 m-b">
 						<div class="md-list-item ">
 							<div class="md-list-item-left"> </div>
