Estilos de badges

--- a/promigrante/app/views/content.html
+++ b/promigrante/app/views/content.html
@@ -14,7 +14,7 @@
 				<a md-ink-ripple ui-sref="access.lockme"> <i class="mdi-action-lock i-24"> </i>Bloquear pantalla </a>
 			</li>
 			<li>
-				<a md-ink-ripple data-toggle="modal" data-target="#user"> <i class="mdi-communication-chat i-24"></i> Chats activos </a>
+				<a md-ink-ripple data-toggle="modal" data-target="#user"> <i class="mdi-communication-chat i-24"></i> Chats activos <span class="badge pm-bg-orange badge-xs">2</span></a>
 			</li>
 			<li>
 				<a md-ink-ripple ui-sref="access.signin" title="Salir"> <i class="mdi-action-exit-to-app i-20"></i> Salir</a>
