--- a/promigrante/app/views/partials/aside.nav.uikit.html
+++ b/promigrante/app/views/partials/aside.nav.uikit.html
@@ -7,7 +7,7 @@
 		<li>
 			<a md-ink-ripple> <span class="pull-right text-muted">
           <i class="fa fa-caret-down"></i>
-        </span> <i class="pull-right up"><b class="badge bg-danger">8</b></i> <i class="icon mdi-notification-tap-and-play i-20"></i> <span class="font-normal">Eventos</span> </a>
+        </span> <i class="pull-right up"><b class="badge pm-bg-orange">8</b></i> <i class="icon mdi-notification-tap-and-play i-20"></i> <span class="font-normal">Eventos</span> </a>
 			<ul class="nav nav-sub">
 				<li ui-sref-active="active"> <a md-ink-ripple ui-sref="app.events_open">Activos</a> </li>
 				<li ui-sref-active="active"> <a md-ink-ripple ui-sref="app.events_closed">Cerrados</a> </li>
