Info de suscripción

--- a/promigrante/app/views/profamilia/my_profile.html
+++ b/promigrante/app/views/profamilia/my_profile.html
@@ -50,7 +50,7 @@
 		<div class="md-whiteframe-z0 bg-white">
 			<ul class="nav nav-lines nav-tabs b-warning">
 				<li class="active"> <a href data-toggle="tab" data-target="#emergency_plan">Plan familiar de contingencia</a> </li>
-<!--
+				<!--
 				<li> <a href data-toggle="tab" data-target="#chat">Chats <span class="badge bg-warning badge-xs">5</span></a> </li>
 				<li> <a href data-toggle="tab" data-target="#news_feed">News feed</a> </li>
 -->
@@ -61,45 +61,35 @@
 				<div role="tabpanel" class="tab-pane animated fadeIn active" id="emergency_plan">
 					<div class="md-list md-whiteframe-z0 bg-white m-b">
 						<div class="md-list-item">
-							<div class="md-list-item-left pm-bg-green">
-            1
-          </div>
+							<div class="md-list-item-left pm-bg-green"> 1 </div>
 							<div class="md-list-item-content">
 								<h3 class="text-md bold">¿Tiene algún padecimiento de salud?</h3> <strong>Sí</strong> </div>
 						</div>
 					</div>
 					<div class="md-list md-whiteframe-z0 bg-white m-b">
 						<div class="md-list-item">
-							<div class="md-list-item-left pm-bg-green">
-            2
-          </div>
+							<div class="md-list-item-left pm-bg-green"> 2 </div>
 							<div class="md-list-item-content">
 								<h3 class="text-md bold">¿Tiene algún padecimiento de salud?</h3> <strong>Sí</strong> </div>
 						</div>
 					</div>
 					<div class="md-list md-whiteframe-z0 bg-white m-b">
 						<div class="md-list-item">
-							<div class="md-list-item-left pm-bg-green">
-            3
-          </div>
+							<div class="md-list-item-left pm-bg-green"> 3 </div>
 							<div class="md-list-item-content">
 								<h3 class="text-md bold">¿Se encuentra en tratamiento médico?</h3> <strong>Sí</strong> </div>
 						</div>
 					</div>
 					<div class="md-list md-whiteframe-z0 bg-white m-b">
 						<div class="md-list-item">
-							<div class="md-list-item-left pm-bg-green">
-            4
-          </div>
+							<div class="md-list-item-left pm-bg-green"> 4 </div>
 							<div class="md-list-item-content">
 								<h3 class="text-md bold">¿Tiene Hijos?</h3> <strong>Sí</strong> </div>
 						</div>
 					</div>
 					<div class="md-list md-whiteframe-z0 bg-white m-b">
 						<div class="md-list-item">
-							<div class="md-list-item-left pm-bg-green">
-            5
-          </div>
+							<div class="md-list-item-left pm-bg-green"> 5 </div>
 							<div class="md-list-item-content">
 								<h3 class="text-md bold">¿Cuántos?</h3> <strong>4</strong> </div>
 						</div>
@@ -168,6 +158,51 @@
 								<div class="col-sm-6">
 									<button class="btn btn-success" data-toggle="tab" data-target="#personal_info">Guardar</button>
 									<button class="btn btn-default" data-toggle="tab" data-target="#personal_info">Cancelar</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div role="tabpanel" class="tab-pane animated fadeIn" id="subscription">
+					<div class="card">
+						<div class="card-body">
+							<div class="row row-sm">
+								<div class="col-sm-12">
+								
+									<p>Su suscripción vence el <strong>19 de noviembre de 2017</strong>.</p>
+								
+								</div>
+								<div class="col-sm-6">
+									<div class="form-group">
+										<select class="form-control">
+											<option>Tarjeta de crédito o débito</option>
+											<option>Pago referenciado</option>
+											<option>Pay Pal</option>
+										</select>
+									</div>
+								</div>
+							</div>
+							<div class="row row-sm">
+								<div class="col-sm-6">
+									<div class="md-form-group">
+										<input class="md-input" value="**** **** **** 1728">
+										<label>Tarjeta</label>
+									</div>
+								</div>
+								<div class="col-sm-3">
+									<div class="md-form-group">
+										<input class="md-input" value="01">
+										<label>Mes de vencimiento</label>
+									</div>
+								</div>
+								<div class="col-sm-3">
+									<div class="md-form-group">
+										<input class="md-input" value="19">
+										<label>Año de vencimiento</label>
+									</div>
+								</div>
+								<div class="col-sm-6">
+									<button class="btn pm-btn-blue" disabled data-toggle="tab" data-target="#personal_info">Actualizar</button>
 								</div>
 							</div>
 						</div>
