--- a/promigrante/app/views/profamilia/my_profile.html
+++ b/promigrante/app/views/profamilia/my_profile.html
@@ -94,6 +94,7 @@
 								<h3 class="text-md bold">¿Cuántos?</h3> <strong>4</strong> </div>
 						</div>
 					</div>
+					
 				</div>
 				<div role="tabpanel" class="tab-pane animated fadeIn" id="personal_info">
 					<div class="card">
@@ -337,4 +338,4 @@
       </div>
 
     </div>--></div>
-</div> <a md-ink-ripple class="md-btn md-fab md-fab-bottom-right pos-fix pm-btn-orange"><i class="mdi-editor-mode-edit i-24"></i></a>
+</div> <a md-ink-ripple class="md-btn md-fab md-fab-bottom-right pos-fix pm-btn-orange" data-toggle="tab" data-target="#personal_info_edit"><i class="mdi-editor-mode-edit i-24"></i></a>
