--- a/promigrante/movil/www/templates/panic.html
+++ b/promigrante/movil/www/templates/panic.html
@@ -1,5 +1,13 @@
 <ion-view view-title="{{(show_timer)?'Alarma activada...':'Botón de pánico'}}">
 	<ion-content>
+		
+<!--
+		<audio>
+  <source src="audio/panic_timer.ogg" type="audio/ogg">
+  <source src="audio/panic_timer.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+-->
 		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">{{(show_timer)?'BOTÓN DE PÁNICO ACTIVADO':'¿ESTÁS EN PROBLEMAS?'}}</strong> </div>
 		<div class="im-wrapper">
 			<p ng-if="!show_timer" class="text-center" ng-click="start_panic()" style="margin-top:-17px">
