--- a/promigrante/movil/www/templates/contingency_plan.html
+++ b/promigrante/movil/www/templates/contingency_plan.html
@@ -4,7 +4,12 @@
 		
 		<div class="im-wrapper">
 <!--			<h4><i class="icon ion-android-people"></i> Plan de Contingencia</h4>-->
-<!--			<p>Ante una situación crítica cuentas con procedimientos alternativos para tus contactos seleccionados, cuyo fin es una reacción especifica ante alguna detención. El plan de contingencia es un método preventivo, el cual da un avance a la hora de una eventualidad. Tu plan de contingencia hace cara a futuros acontecimientos para los que hace falta estar preparado.</p>-->
+			<p>REPRESENTA LA OPORTUNIDAD DE QUE ANTE EL HECHO DE UNA DETENCIÓN Y PROBABLE DEPORTACIÓN, TENGAS LA TRANQUILIDAD QUE TU VOLUNTAD Y DECISIÓN SOBRE TEMAS RELEVANTES DE TU VIDA, SEAN DEL CONOCIMIENTO DE TU FAMILIA O PERSONAS DE INTERÉS A TRAVÉS DE TUS CONTACTOS REGISTRADOS.</p>
+			
+			<p>SI REQUIERES CONSULTAR EL ESTATUS DE DE PLAN FAMILIAR DE CONTINGENCIA  PULSA EL SIGUIENTE ENLACENUEVAMENTE TU PLAN FAMILIAR DE CONTINGENCIA PULSA EL BOTÓN E INMEDIATAMENTE TE SERÁ ENVIADO A TU DIRECCIÓN DE CORREO ELECTRÓNICO REGISTRADA</p>
+			
+				<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-green icon balanced ion-ios-telephone-outline"> ESTATUS PLAN FAMILIAR DE CONTINGENCIA </button>
+			
 			
 			
 			<h4>Preguntas de seguridad</h4>
