--- a/promigrante/movil/www/templates/help_support.html
+++ b/promigrante/movil/www/templates/help_support.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Ayuda y soporte">
+<ion-view view-title="Contacto: dudas, quejas y sugerencias">
 	<ion-content>
 		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">ProMigrante</strong> </div>
 		<div class="im-wrapper">
