--- a/promigrante/movil/www/templates/menu.html
+++ b/promigrante/movil/www/templates/menu.html
@@ -19,14 +19,21 @@
 		<ion-content class="has-expanded-header">
 			<ion-list>
 				<ion-item nav-clear menu-close href="#/app/panic"><i class="icon ion-ios-bell"></i> Botón de pánico </ion-item>
+				<ion-item nav-clear menu-close href="#/app/effective_call"><i class="icon ion-ios-telephone"></i> Llamada efectiva </ion-item>
 				<ion-item nav-clear menu-close href="#/app/contingency_plan"><i class="icon ion-android-document"></i> Plan familiar de contingencia </ion-item>
-				<ion-item nav-clear menu-close href="#/app/chat"><i class="icon ion-chatbubbles"></i> Chat </ion-item>
-				<ion-item nav-clear menu-close href="#/app/news_feed"><i class="icon ion-ios-paper"></i> News feed </ion-item>
-				<ion-item nav-clear menu-close href="#/app/notifications"><i class="icon ion-android-cloud-done"></i> Notificaciones </ion-item>
+				<ion-item nav-clear menu-close href="#/app/protocol"><i class="icon ion-pull-request"></i> Protocolo de seguimiento de integridad </ion-item>
+				<ion-item nav-clear menu-close href="#/app/legal_support"><i class="icon ion-help-buoy"></i> Asesoría legal </ion-item>
+				<ion-item nav-clear menu-close href="#/app/nolimit_calls"><i class="icon ion-speakerphone"></i> Llamadas ilimitadas </ion-item>
+				<ion-item nav-clear menu-close href="#/app/lawyers_network"><i class="icon ion-ios-body"></i> Red de abogados </ion-item>
+				<ion-item nav-clear menu-close href="#/app/news_feed"><i class="icon ion-ios-paper"></i> Noticias </ion-item>
+				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-card"></i> Tu cuenta </ion-item>
+<!--				<ion-item nav-clear menu-close href="#/app/chat"><i class="icon ion-chatbubbles"></i> Chat </ion-item>-->
+				
+<!--				<ion-item nav-clear menu-close href="#/app/notifications"><i class="icon ion-android-cloud-done"></i> Notificaciones </ion-item>-->
 				
 				
-				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-card"></i> Cuenta y suscripción </ion-item>
-				<ion-item nav-clear menu-close href="#/app/help_support"><i class="icon ion-help-circled"></i> Ayuda y soporte </ion-item>
+				
+				<ion-item nav-clear menu-close href="#/app/help_support"><i class="icon ion-help-circled"></i> Contacto: dudas, quejas y reclamaciones. </ion-item>
 				
 				<ion-item nav-clear menu-close href="#/login"><i class="icon ion-door"></i> Salir </ion-item>
 				<!--				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-exit"></i> Cerrar sesión </ion-item>-->
