--- a/promigrante/movil/www/templates/panic.html
+++ b/promigrante/movil/www/templates/panic.html
@@ -1,18 +1,24 @@
 <ion-view view-title="{{(show_timer)?'Alarma activada...':'Botón de pánico'}}">
 	<ion-content>
+
+		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">{{(show_timer)?'BOTÓN DE PÁNICO ACTIVADO':'¿ESTÁS EN PROBLEMAS?'}}</strong> </div>
+		
+		
+		
 		
 <!--
-		<audio>
-  <source src="audio/panic_timer.ogg" type="audio/ogg">
-  <source src="audio/panic_timer.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
+		<div class="loader">
+			
+			
+			<svg class="circular">
+				<circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
+			</svg>
+		</div>
 -->
-		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">{{(show_timer)?'BOTÓN DE PÁNICO ACTIVADO':'¿ESTÁS EN PROBLEMAS?'}}</strong> </div>
 		<div class="im-wrapper">
 			<p ng-if="!show_timer" class="text-center" ng-click="start_panic()" style="margin-top:-17px">
 				<!--				<button class="button button-assertive button-fab ink-dark button-raised " style="width:200px; height:200px;"> <i class="icon" style="width:200px; height:200px; font-size:30px">{{help_text}}</i> </button>--><img ng-if="!button_pressed" width="100%" src="img/assets/btn-panic-normal.png"> <img ng-if="button_pressed" width="100%" src="img/assets/btn-panic-pressed.png"> </p>
-			<p ng-if="!show_timer" style="margin-top:-20px;margin-bottom:7px;" class="pm-detona">DETONA EL BOTÓN</p>
+			<p ng-if="!show_timer" style="margin-top:-20px;margin-bottom:7px;" class="pm-detona">{{(!button_pressed)?'DENOTA EL BOTÓN':'PRESIONA PARA CANCELAR'}}</p>
 			<p ng-if="show_timer" class="text-center bold"> Estimado Jorge, se han iniciado los procesos y protocolos de atención a tu solicitud.
 				<br> </p>
 			<p ng-if="!show_timer" class="text-center pm-instructions">Envía tus coordenadas al momento o llama al Call Center para recibir ayuda inmediata.</p>
