Mejora en la alarma

--- a/promigrante/movil/www/templates/panic.html
+++ b/promigrante/movil/www/templates/panic.html
@@ -1,12 +1,7 @@
 <ion-view view-title="{{(show_timer)?'Alarma activada...':'Botón de pánico'}}">
 	<ion-content>
-
 		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">{{(show_timer)?'BOTÓN DE PÁNICO ACTIVADO':'¿ESTÁS EN PROBLEMAS?'}}</strong> </div>
-		
-		
-		
-		
-<!--
+		<!--
 		<div class="loader">
 			
 			
@@ -21,7 +16,7 @@
 			<p ng-if="!show_timer" style="margin-top:-20px;margin-bottom:7px;" class="pm-detona">{{(!button_pressed)?'DENOTA EL BOTÓN':'PRESIONA PARA CANCELAR'}}</p>
 			<p ng-if="show_timer" class="text-center bold"> Estimado Jorge, se han iniciado los procesos y protocolos de atención a tu solicitud.
 				<br> </p>
-			<p ng-if="!show_timer" class="text-center pm-instructions">Envía tus coordenadas al momento o llama al Call Center para recibir ayuda inmediata.</p>
+			<p ng-if="!show_timer" class="text-center pm-instructions">{{(!button_pressed)?'Envía tus coordenadas al momento o llama al Call Center para recibir ayuda inmediata.':'Se confirmará alarma en 3 segundos...'}}</p>
 			<a href="tel:18009999999">
 				<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-green icon balanced ion-ios-telephone-outline"> Llamar al Call Center </button>
 			</a>
