--- a/promigrante/movil/www/templates/effective_call.html
+++ b/promigrante/movil/www/templates/effective_call.html
@@ -1,38 +1,41 @@
 <ion-view view-title="Llamada efectiva">
 	<ion-content>
-<!--<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">ProMigrante</strong> </div>-->
+		<!--<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">ProMigrante</strong> </div>-->
 		<div class="im-wrapper">
-		<p>ESTIMADO XXXX. DE ACUERDO A LA ESTIPULACIÓN NORMATIVA XXXXXXXX, EN CASO DE QUE SEAS DETENIDO POR AUTORIDADES MIGRATORIAS , TIENES DERECHO A REALIZAR UNA LLAMADA TELEFÓNICA DE 2 MINUTOS DE DURACIÓN</p>
-			
-			<p>SI TE ENCUENTRAS EN SITUACIÓN DE RIESGO DE DETENCIÓN O YA EN TU POCESO DE DETENCIÓN, COMUNÍCATE AL</p>
-			
+			<p>Estimado Jorge Hernández. De acuerdo a la estipulación normativa XXXXX-XX, en caso de que seas detenido por autoridades migratorias, tienes derecho a realizar una llamada telefónica de 2 minutos de duración.</p>
+			<p>Si te encuentras en situación de riesgo de detención o ya en tu poceso de detención, comunícate al:</p>
 			<a href="tel:18009999999">
 				<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-green icon balanced ion-ios-telephone-outline"> 01 800 HELP (999 9999) </button>
 			</a>
-			
-			<p>DE MANERA INMEDIATA, TU LLAMADA SE CONVIERTE EN:</p>
-
-			<ion-list>
-				<ion-item>LLAMADAS A TUS TRES CONTACTOS REGISTRADOS</ion-item>
-				<ion-item>LLAMADA AL CONSULADO DE MÉXICO EN XXXXXXX</ion-item>
-				<ion-item>LLAMADA Y ENLACE PARA TU ASISTENCIA PERSONAL DE UN ABOGADO DE LA RED DE TU SERVICIO (VERIFICANDO DISPONIBILIDAD)</ion-item>
-			</ion-list>
-			
-			<p>VERIFICA TUS CONTACTOS REGISTRADOS PARA QUE SIEMPRE MANTENGAS ACTUALIZADA ESTA INFORMACIÓN:</p>
-			<p>VERIFICA EL ZIP CODE DE TU LUGAR DE RESIDENCIA, YA QUE LA ASISTENCIA PERSONAL DEL ABOGADO Y DEL CONSULADO DEPENDE DE SU VERACIDAD</p>
-			
+			<p>De manera inmediata, tu llamada se convierte en:</p>
+			<div class="row" style="margin-top:-30px">
+				<div class="col col-20"><i class="ion-checkmark-round"></i></div>
+				<div class="col col-80"><p>Llamadas a tus contactos registrados.</p></div>
+			</div>
+			<div class="row" style="margin-top:-30px">
+				<div class="col col-20"><i class="ion-checkmark-round"></i></div>
+	
+				<div class="col col-80"><p>Llamada al consulado de méxico en XXXXXXX.</p></div>
+			</div>
+			<div class="row" style="margin-top:-30px">
+				<div class="col col-20"><i class="ion-checkmark-round"></i></div>
+		
+				<div class="col col-80"><p>Llamada y enlace para tu asistencia personal de un abogado de la red de tu servicio (verificando disponibilidad)</p></div>
+			</div>
+			<p>Verifica tus contactos registrados para que siempre mantengas actualizada esta información:</p>
+			<p>Verifica el zip code de tu lugar de residencia, ya que la asistencia personal del abogado y del consulado depende de su veracidad.</p>
+			<button class="button button-small button-block pm-button-blue" style="margin-top:-8px">Verifica aquí</button>
+<!--
 			<div class="list">
-				<label class="item item-input item-stacked-label" style="padding:0px;"> 
+				<label class="item item-input item-stacked-label" style="padding:0px;">
 					<input type="text" style="padding: 14px;" class="pm-input" placeholder="Ingrese código"> </label>
 				<button class="button button-small button-block" style="margin-top:-8px">Validar ZIP CODE</button>
 			</div>
-			
+-->
 			<br>
 			<br>
 			<br>
 			<br>
-			<br>
-		
-		</div>
+			<br> </div>
 	</ion-content>
 </ion-view>
