--- a/promigrante/movil/www/templates/intro_slider.html
+++ b/promigrante/movil/www/templates/intro_slider.html
@@ -3,7 +3,7 @@
 		<div class="box" style="background-color:#fbf9c6">
 			<div class="im-wrapper">
 				<h4 class="text-center" style="color:#ee5923;">¿En riesgo de deportación?</h4>
-				<p class="text-center"><img class="item" style="border:none;" src="img/intro/1.png"></p>
+				<p class="text-center"><img style="border:none;" src="img/intro/1.png"></p>
 				
 				<p class="text-center" style="color:#ee5923;">Si te encuentras en peligro de deportación emite alertas a tus contactos seleccionados, abogado y consulado en tiempo real para obtener un seguimiento  de ayuda y si es necesario, ejecutar  tu plan de contingencia.</p>
 			</div>
@@ -13,7 +13,7 @@
 		<div class="box" style="background-color:#d4eefc">
 			<div class="im-wrapper">
 				<h4 class="text-center" style="color:#ee5923;">Botón de Pánico</h4>
-				<p class="text-center"><img class="item" style="border:none;" src="img/intro/2.png"></p>
+				<p class="text-center"><img style="border:none;" src="img/intro/2.png"></p>
 				<p class="text-center">Envía tus coordenadas al momento de detonar el botón de pánico a tus contactos seleccionados, abogado y consulado, lo cual facilita y ahorra tiempo ante una acción de respuesta especifica.</p>
 			</div>
 		</div>
@@ -22,7 +22,7 @@
 		<div class="box" style="background-color:#e0f0eb">
 			<div class="im-wrapper">
 				<h4 class="text-center" style="color:#ee5923;">Contratación fácil</h4>
-				<p class="text-center"><img class="item" style="border:none;" src="img/intro/3.png"></p>
+				<p class="text-center"><img style="border:none;" src="img/intro/3.png"></p>
 				<p class="text-center" style="color:#ee5923;">Contratar te lleva 3 sencillos pasos. <br> <strong>¡No estas solo!</strong></p>
 				<button id="start_button" class="button button-block pm-button-green icon balanced" ng-click="goTo('login')"> COMENZAR </button>
 			</div>
