--- a/promigrante/movil/www/templates/lawyers_network.html
+++ b/promigrante/movil/www/templates/lawyers_network.html
@@ -2,7 +2,30 @@
 	<ion-content>
 		<div class="im-wrapper">
 			<p>Disposición de la mejor red de abogados en temas migratorios en los Estados Unidos, que otorga una amplia oferta de servicios y una asesoría de manera personal y presencial en caso de detención.</p>
-			<p>En caso de estar disponible en tu localidad “Personalizado” tu paquete te da derecho a una primera visita presencial. </p>
+			<p class="text-center"><strong>En caso de estar disponible en tu localidad “Personalizado” tu paquete te da derecho a una primera visita presencial.</strong> </p>
+			<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-green"> Verificar disponibilidad </button>
 		</div>
+		<div class="card">
+			<div class="item item-text-wrap">
+				<div class="item item-divider">
+					<p class="text-center"><i class="ion-ios-checkmark balanced"></i> Servicio disponible</p>
+				</div>
+				<div class="item item-text-wrap">
+					<p>En tu localidad <strong>Phar, Texas</strong> <u>SI cuentas con este servicio</u> y se activa en la confirmación de tu pago</p>
+				</div>
+			</div>
+		</div>
+		<hr>
+		<div class="card">
+			<div class="item item-divider">
+					<p class="text-center"><i class="ion-close assertive"></i> Servicio no disponible</p>
+				</div>
+			<div class="item item-text-wrap"> En tu localidad <strong>Phar, Texas</strong> <u>NO cuentas con este servicio</u>. Sin embargo te avisaremos su disponibilidad por si deseas su contratación posteriormente. </div>
+		</div>
+		
+		<br>
+		<br>
+		<br>
+		<br>
 	</ion-content>
 </ion-view>
