--- a/promigrante/movil/www/templates/legal_support.html
+++ b/promigrante/movil/www/templates/legal_support.html
@@ -3,6 +3,14 @@
 
 		<div class="im-wrapper">
 		<p>Asiste y brinda asesoría las 24 horas, 365 días del año, vía telefónica y correo electrónico, con la mejor orientación según las necesidades, ofreciendo una comprensión del estado legal actual en materia migratoria. Apoyo según las características particulares de cada caso de los nacionales mexicanos en Estados Unidos, para dar una respuesta más realista de cómo se puede ayudar en tiempo real. </p>
+			<button id="start_button" class="button button-block pm-button-orange ion-chatbubble-working" ng-click="goTo('app.chat_conversation')"> Chat en vivo </button>
 		</div>
+		
+		
 	</ion-content>
+	<a href="tel:18009999999">
+	<div class="bar bar-footer pm-button-green ink-dark">
+		<div class="title"><i class="ion-ios-telephone"></i> Centro de Atención</div>
+	</div>
+	</a>
 </ion-view>
