--- a/promigrante/movil/www/templates/login.html
+++ b/promigrante/movil/www/templates/login.html
@@ -1,12 +1,13 @@
 <div class="im-wrapper bglogin">
 	<br>
-	<p class="text-center"><img src="img/logo-login.png" width="80%" ng-click="goTo('intro')"></p>
+	<p class="text-center"><img src="img/logo-login.png" width="210" ng-click="goTo('intro')"></p>
+	<p class="text-center"><small>Demo: 7.Abril.2017</small></p>
 	<div class="list">
 		<label class="item item-input item-floating-label"> <span class="input-label">Usuario</span>
 			<input type="text" placeholder="Usuario / Correo electrónico"> </label>
 		<label class="item item-input item-floating-label"> <span class="input-label">Contraseña</span>
 			<input type="password" placeholder="Contraseña"> </label>
-		<br />
+		
 <!--
 		<div class="item item-checkbox">
 			<label class="checkbox">
