--- a/promigrante/movil/www/templates/news_feed.html
+++ b/promigrante/movil/www/templates/news_feed.html
@@ -1,95 +1,72 @@
 <ion-view view-title="News feed">
 	<ion-content>
-<!--		<div class="bar bar-subheader bar-stable static text-center"> <strong class="title">Este es tu plan de contingencia</strong> </div>-->
-		
+		<!--		<div class="bar bar-subheader bar-stable static text-center"> <strong class="title">Este es tu plan de contingencia</strong> </div>-->
 		<div class="im-wrapper">
-			<h4 class="border-top"><i class="icon ion-chatbubbles"></i> Noticias y actualidad</h4>
-           <div class="list card light-bg" ng-click="goTo('app.news_detail')">
-                <div class="item item-avatar">
-                    <img src="img/news/news-1.jpg">
-                    <h2>Demócratas hispanos prometen defender a inmigrantes</h2>
-                    <p>18/Enero/2017</p>
-                </div>
-                <div class="item item-body">
-                    La reforma migratoria será prioridad para la senadora Catherine Cortez...
-                    <p>
-                        <a class="subdued">1 Like</a>
-                        <a class="subdued"></a>
-                    </p>
-                </div>
-                <div class="item tabs tabs-secondary tabs-icon-left">
-                    <a class="tab-item positive" data-ink-color="#336699" data-ink-opacity="0.5">
-                        <i class="icon ion-thumbsup"></i> te gusta
-                    </a>
-<!--
+			<h4 class="border-top"><i class="icon ion-chatbubbles"></i> Noticias y actualidad</h4> </div>
+		<div class="list card light-bg" ng-click="goTo('app.news_detail')">
+			<div class="item item-avatar"> <img src="img/news/news-1.jpg">
+				<h2>Demócratas hispanos prometen defender a inmigrantes</h2>
+				<p>18/Enero/2017</p>
+			</div>
+			<div class="item item-body"> La reforma migratoria será prioridad para la senadora Catherine Cortez...
+				<p> <a class="subdued">1 Like</a>
+					<a class="subdued"></a>
+				</p>
+			</div>
+			<div class="item tabs tabs-secondary tabs-icon-left">
+				<a class="tab-item positive" data-ink-color="#336699" data-ink-opacity="0.5"> <i class="icon ion-thumbsup"></i> te gusta </a>
+				<!--
                     <a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5">
                         <i class="icon ion-chatbox"></i> Comena
                     </a>
 -->
-<!--
+				<!--
                     <a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5">
                         <i class="icon ion-share"></i> Compartir
                     </a>
--->
-                </div>
-            </div>
-           <div class="list card light-bg" ng-click="goTo('app.news_detail')">
-                <div class="item item-avatar">
-                    <img src="img/news/news-2.jpg">
-                    <h2>Suprema Corte de EU niega reconsiderar alivio a indocumentados</h2>
-                    <p>12/Enero/2017</p>
-                </div>
-                <div class="item item-body">
-                   Las medidas de Obama buscaban beneficiar a casi cinco millones de indocumentados...
-                    <p>
-                        <a class="subdued">123 Likes</a>
-                        <a class="subdued"></a>
-                    </p>
-                </div>
-                <div class="item tabs tabs-secondary tabs-icon-left">
-                    <a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5">
-                        <i class="icon ion-thumbsup"></i> Like
-                    </a>
-<!--
-                    <a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5">
-                        <i class="icon ion-share"></i> Compartir
-                    </a>
--->
-                </div>
-            </div>
-           <div class="list card light-bg" ng-click="goTo('app.news_detail')">
-                <div class="item item-avatar">
-                    <img src="img/news/news-2.jpg">
-                    <h2>Donald Trump quiere que sólo los más preparados migren a EU</h2>
-                    <p>16/Enero/2017</p>
-                </div>
-                <div class="item item-body">
-                    Habla de una reforma migratoria 'real y justa', privilegiando los méritos y aptitudes...
-                    <p>
-                        <a class="subdued">80 Likes</a>
-                        <a class="subdued"></a>
-                    </p>
-                </div>
-                <div class="item tabs tabs-secondary tabs-icon-left">
-                    <a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5">
-                        <i class="icon ion-thumbsup"></i> Like
-                    </a>
-<!--
-                    <a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5">
-                        <i class="icon ion-share"></i> Compartir
-                    </a>
--->
-                </div>
-            </div>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			
-		
+--></div>
 		</div>
-	</ion-content>
+		<div class="list card light-bg" ng-click="goTo('app.news_detail')">
+			<div class="item item-avatar"> <img src="img/news/news-2.jpg">
+				<h2>Suprema Corte de EU niega reconsiderar alivio a indocumentados</h2>
+				<p>12/Enero/2017</p>
+			</div>
+			<div class="item item-body"> Las medidas de Obama buscaban beneficiar a casi cinco millones de indocumentados...
+				<p> <a class="subdued">123 Likes</a>
+					<a class="subdued"></a>
+				</p>
+			</div>
+			<div class="item tabs tabs-secondary tabs-icon-left">
+				<a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5"> <i class="icon ion-thumbsup"></i> Like </a>
+				<!--
+                    <a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5">
+                        <i class="icon ion-share"></i> Compartir
+                    </a>
+--></div>
+		</div>
+		<div class="list card light-bg" ng-click="goTo('app.news_detail')">
+			<div class="item item-avatar"> <img src="img/news/news-2.jpg">
+				<h2>Donald Trump quiere que sólo los más preparados migren a EU</h2>
+				<p>16/Enero/2017</p>
+			</div>
+			<div class="item item-body"> Habla de una reforma migratoria 'real y justa', privilegiando los méritos y aptitudes...
+				<p> <a class="subdued">80 Likes</a>
+					<a class="subdued"></a>
+				</p>
+			</div>
+			<div class="item tabs tabs-secondary tabs-icon-left">
+				<a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5"> <i class="icon ion-thumbsup"></i> Like </a>
+				<!--
+                    <a class="tab-item" data-ink-color="#336699" data-ink-opacity="0.5">
+                        <i class="icon ion-share"></i> Compartir
+                    </a>
+--></div>
+		</div>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br> </ion-content>
 </ion-view>
